Bug 479015 - Panel shortcut chooser ("KeySequenceItem") uses desktop styling, not Plasma styling
Summary: Panel shortcut chooser ("KeySequenceItem") uses desktop styling, not Plasma s...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 5.27.10
Platform: Other Linux
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 480413 485203 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-12-26 08:12 UTC by PK
Modified: 2024-04-08 06:24 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments
plasma-theme colors not followed in two little elements (1.16 MB, image/jpeg)
2023-12-26 08:12 UTC, PK
Details

Note You need to log in before you can comment on or make changes to this bug.
Description PK 2023-12-26 08:12:39 UTC
Created attachment 164447 [details]
plasma-theme colors not followed in two little elements

SUMMARY
***
When I start edit-mode of my Plasma-panel two buttons are the wrong color. Perhaps the color of these buttons follow the application color scheme and not the Plasma-theme colors.
I really don't think this is the most importand issue of kf6 but still I tell.
***


STEPS TO REPRODUCE
1. right-click on panel
2. open editing mode


OBSERVED RESULT
attachment

EXPECTED RESULT
plasma-theme colors are followed

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.91.90
KDE Frameworks Version: 5.248.0
Qt Version: 6.6.1
Kernel Version: 6.2.0-39-generic (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Celeron® J4105 CPU @ 1.50GHz
Memory: 7.4 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 600
Comment 1 PK 2023-12-26 08:42:22 UTC
Oh, sorry, to be more specific...
I think (but am not 100% sure)  that these buttons use the applicaiton-background-color as background-color and the appliation-foreground-color as foreground-color. 
I wish you all nice and relaxed Christmas days...
Comment 2 Nate Graham 2024-01-11 18:19:47 UTC
Can confirm. The issue is that we used `KeySequenceItem` in a Plasma UI element, but it's not a Plasma control and it respects desktop styling instead.

We'll need to use--and possibly create--a Plasma-themed component for this functionality.
Comment 3 Nate Graham 2024-01-24 22:31:21 UTC
This is one of those sort of sad cases where everything it uses which has desktop styling also has a Plasma equivalent, so in theory we could change the import names at runtime to make it load the Plasma-specific versions of those things, and not have to just copy-paste this code into Plasma.

IIRC we didn't manage to get agreement on that as a formal plan, though.
Comment 4 Nicolas Fella 2024-01-28 00:40:41 UTC
*** Bug 480413 has been marked as a duplicate of this bug. ***
Comment 5 Nate Graham 2024-01-29 16:51:33 UTC
Pre-emptively marking as HI since we're going to get a ton of duplicates for this, given how many distros ship with Breeze Twilight as their default theme.
Comment 6 Nate Graham 2024-02-08 20:19:25 UTC
Actually, it looks like it was present in Plasma 5 too, possibly for quite a while. That lowers the pressure a bit. Still worth doing.
Comment 7 Bug Janitor Service 2024-02-22 10:23:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/qqc2-desktop-style/-/merge_requests/373
Comment 8 Marco Martin 2024-02-22 10:37:55 UTC
Git commit 6ed2d41f3872f67a1397ba2aa05eac082889111e by Marco Martin.
Committed on 22/02/2024 at 10:22.
Pushed by mart into branch 'master'.

Always use values from Kirigami.Theme as control palette

we can't propagate anymore form control's palette as is not a qpalette
anymore
a more proper solution will be needed

M  +5    -6    plugin/kquickstyleitem.cpp

https://invent.kde.org/frameworks/qqc2-desktop-style/-/commit/6ed2d41f3872f67a1397ba2aa05eac082889111e
Comment 9 Niccolò Venerandi 2024-04-08 06:24:42 UTC
*** Bug 485203 has been marked as a duplicate of this bug. ***