Always use values from Kirigami.Theme as control palette

we can't propagate anymore form control's palette as is not a qpalette
anymore
a more proper solution will be needed

BUG:479015